# zvtk

./: .buildinfo  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  README.rst  api.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  sg_execution_times.html
.github/workflows/: ci_cd.yml
_autosummary/: pyvista_zstd.Reader.__init__.html  pyvista_zstd.Reader.available_cell_arrays.html  pyvista_zstd.Reader.available_field_arrays.html  pyvista_zstd.Reader.available_point_arrays.html  pyvista_zstd.Reader.decompressed_sizes.html  pyvista_zstd.Reader.html  pyvista_zstd.Reader.nbytes.html  pyvista_zstd.Reader.read.html  pyvista_zstd.Reader.selected_cell_arrays.html  pyvista_zstd.Reader.selected_field_arrays.html  pyvista_zstd.Reader.selected_point_arrays.html  pyvista_zstd.Reader.show_frame_compression.html  pyvista_zstd.Writer.__init__.html  pyvista_zstd.Writer.html  pyvista_zstd.Writer.write.html  pyvista_zstd.read.html  pyvista_zstd.write.html
_downloads/78619be4325823f0d140bc90eb9d474e/: 00-save-and-load.py
_downloads/b42204eed56fe3cd5b7fe5f0991b9bb9/: 02-selective-multiblock.py
_downloads/b5bcee25a4d2086cf3ba8a60e8d37f00/: 02-selective-multiblock.ipynb
_downloads/c5355f114b032ef7af7b20ffd1c0e909/: 01-compare.ipynb
_downloads/f2278fa6c61fe2e7a9c01b7369d36682/: 00-save-and-load.ipynb
_sources/_autosummary/: pyvista_zstd.Reader.__init__.rst  (+16 more)
auto_examples/: 00-save-and-load.html  01-compare.html  02-selective-multiblock.html  index.html  sg_execution_times.html
benchmarks/: README.md  benchmark-examples.py  benchmark-single-ds.py  benchmark-synthetic.py  compression_alg_comparison.html  index.html  pv_examples.html  pyvista_zstd_benchmark.html  single-ds-many-compressions.py  single-ds-zvtk.py  synthetic_dataset.html
doc/: Makefile  api.rst  conf.py  index.rst
examples/: 00-save-and-load.py  01-compare.py  02-selective-multiblock.py  README.txt
tests/: conftest.py  test_pyvista_registry.py  test_pyvista_zstd.py  test_zvtk.py
(+18 files in other folders)
